Data/XCSoar.rc,build/resource: Implements new SVG icons.
New icons added to resource file.

SVG graphics are now rendered using the x/y zoom parameters; icon
dimensions are determined by the canvas size of the SVG file.

The ideal display for the baseline 320x240 resolution is assumed to
be a 4" display (100 pixels per inch). Icons rendered at higher
resolutions are given the suffix -x where -x represents the
required display ppi for the icon to have the same physical
dimensions as the ideal 320x240 display. For example, on a 640x480
5" display 160ppi icons would appear the same physical size as
100ppi icons on a 320x240 4" display.

--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -11,11 +11,11 @@ IDI_XCSOAR              ICON    DISCARDABLE     "bitmaps/xcsoarswift.ico"
 
 // --- Bitmaps ---
 
-IDB_ABORT               BITMAP  DISCARDABLE     "bitmaps/abort.bmp"
+IDB_ABORT               BITMAP  DISCARDABLE     "../output/data/icons/mode_abort.bmp"
 IDB_ABOVETERRAIN        BITMAP  DISCARDABLE     "bitmaps/aboveterrain.bmp"
-IDB_AIRPORT_REACHABLE   BITMAP  DISCARDABLE     "bitmaps/LandableAirport.bmp"
-IDB_AIRPORT_UNREACHABLE BITMAP  DISCARDABLE     "bitmaps/UnreachableAirport.bmp"
-IDB_AIRPORT_UNREACHABLE2 BITMAP  DISCARDABLE     "bitmaps/UnreachableAirport2.bmp"
+IDB_AIRPORT_REACHABLE   BITMAP  DISCARDABLE     "../output/data/icons/alt_reachable_airport.bmp"
+IDB_AIRPORT_UNREACHABLE BITMAP  DISCARDABLE     "../output/data/icons/alt_landable_airport.bmp"
+IDB_AIRPORT_UNREACHABLE2 BITMAP  DISCARDABLE     "../output/data/icons/alt2_landable_airport.bmp"
 IDB_AIRSPACE0           BITMAP  DISCARDABLE     "bitmaps/airspace0.bmp"
 IDB_AIRSPACE1           BITMAP  DISCARDABLE     "bitmaps/airspace1.bmp"
 IDB_AIRSPACE2           BITMAP  DISCARDABLE     "bitmaps/airspace2.bmp"
@@ -26,40 +26,40 @@ IDB_AIRSPACE6           BITMAP  DISCARDABLE     "bitmaps/airspace6.bmp"
 IDB_AIRSPACE7           BITMAP  DISCARDABLE     "bitmaps/airspace7.bmp"
 IDB_AIRSPACEI           BITMAP  DISCARDABLE     "bitmaps/airspacei.bmp"
 IDB_AUTOMACCREADY       BITMAP  DISCARDABLE     "bitmaps/automcre.bmp"
-IDB_CRUISE              BITMAP  DISCARDABLE     "bitmaps/cruise.bmp"
-IDB_CLIMB               BITMAP  DISCARDABLE     "bitmaps/climb.bmp"
+IDB_CRUISE              BITMAP  DISCARDABLE     "../output/data/icons/mode_cruise.bmp"
+IDB_CLIMB               BITMAP  DISCARDABLE     "../output/data/icons/mode_climb.bmp"
 IDB_CLIMBSMALL          BITMAP  DISCARDABLE     "bitmaps/climb_12.bmp"
 IDB_CLIMBSMALLINV       BITMAP  DISCARDABLE     "bitmaps/climb_12inv.bmp"
 IDB_DLGBUTTONLEFT16     BITMAP  DISCARDABLE     "bitmaps/DialogButtonLeft16x16.bmp"
 IDB_DLGBUTTONLEFT32     BITMAP  DISCARDABLE     "bitmaps/DialogButtonLeft32x32.bmp"
 IDB_DLGBUTTONRIGHT16    BITMAP  DISCARDABLE     "bitmaps/DialogButtonRight16x16.bmp"
 IDB_DLGBUTTONRIGHT32    BITMAP  DISCARDABLE     "bitmaps/DialogButtonRight32x32.bmp"
-IDB_FINALGLIDE          BITMAP  DISCARDABLE     "bitmaps/finalgli.bmp"
-IDB_FLARMTRAFFIC        BITMAP  DISCARDABLE     "bitmaps/flarmtra.bmp"
-IDB_GPSSTATUS1          BITMAP  DISCARDABLE     "../output/data/icons/gps_acquiring-19.bmp"
-IDB_GPSSTATUS2          BITMAP  DISCARDABLE     "../output/data/icons/gps_disconnected-19.bmp"
-IDB_LANDABLE            BITMAP  DISCARDABLE     "../output/data/icons/winpilot_landable-19.bmp"
-IDB_LANDABLE_BIG        BITMAP  DISCARDABLE     "../output/data/icons/winpilot_landable-31.bmp"
+IDB_FINALGLIDE          BITMAP  DISCARDABLE     "../output/data/icons/mode_finalglide.bmp"
+IDB_FLARMTRAFFIC        BITMAP  DISCARDABLE     "../output/data/icons/map_flarm.bmp"
+IDB_GPSSTATUS1          BITMAP  DISCARDABLE     "../output/data/icons/gps_acquiring.bmp"
+IDB_GPSSTATUS2          BITMAP  DISCARDABLE     "../output/data/icons/gps_disconnected.bmp"
+IDB_LANDABLE            BITMAP  DISCARDABLE     "../output/data/icons/winpilot_landable.bmp"
+IDB_LANDABLE_BIG        BITMAP  DISCARDABLE     "../output/data/icons/winpilot_landable-160.bmp"
 IDB_LAUNCHER1           BITMAP  DISCARDABLE     "../output/data/graphics/launcher-224-1.bmp"
 IDB_LAUNCHER2           BITMAP  DISCARDABLE     "../output/data/graphics/launcher-224-2.bmp"
-IDB_LOGGER              BITMAP  DISCARDABLE     "bitmaps/logging.bmp"
-IDB_LOGGEROFF           BITMAP  DISCARDABLE     "bitmaps/loggingoff.bmp"
+IDB_LOGGER              BITMAP  DISCARDABLE     "../output/data/icons/icon_logging.bmp"
+IDB_LOGGEROFF           BITMAP  DISCARDABLE     "../output/data/icons/icon_logging_off.bmp"
 IDB_MAPSCALE_A          BITMAP  DISCARDABLE     "bitmaps/MapScale_A.bmp"
-IDB_MARK                BITMAP  DISCARDABLE     "bitmaps/mark.bmp"
-IDB_OUTFIELD_REACHABLE  BITMAP  DISCARDABLE     "bitmaps/LandableField.bmp"
-IDB_OUTFIELD_UNREACHABLE BITMAP  DISCARDABLE     "bitmaps/UnreachableField.bmp"
-IDB_OUTFIELD_UNREACHABLE2 BITMAP  DISCARDABLE     "bitmaps/UnreachableField2.bmp"
-IDB_REACHABLE           BITMAP  DISCARDABLE     "../output/data/icons/winpilot_reachable-19.bmp"
-IDB_REACHABLE_BIG       BITMAP  DISCARDABLE     "../output/data/icons/winpilot_reachable-31.bmp"
-IDB_SMALL               BITMAP  DISCARDABLE     "bitmaps/Small.bmp"
+IDB_MARK                BITMAP  DISCARDABLE     "../output/data/icons/map_flag.bmp"
+IDB_OUTFIELD_REACHABLE  BITMAP  DISCARDABLE     "../output/data/icons/alt_reachable_field.bmp"
+IDB_OUTFIELD_UNREACHABLE BITMAP  DISCARDABLE     "../output/data/icons/alt_landable_field.bmp"
+IDB_OUTFIELD_UNREACHABLE2 BITMAP  DISCARDABLE     "../output/data/icons/alt2_landable_field.bmp"
+IDB_REACHABLE           BITMAP  DISCARDABLE     "../output/data/icons/winpilot_reachable.bmp"
+IDB_REACHABLE_BIG       BITMAP  DISCARDABLE     "../output/data/icons/winpilot_reachable-160.bmp"
+IDB_SMALL               BITMAP  DISCARDABLE     "../output/data/icons/map_small.bmp"
 IDB_SWIFT               BITMAP  DISCARDABLE     "../output/data/graphics/xcsoarswiftsplash-220.bmp"
 IDB_SWIFT2              BITMAP  DISCARDABLE     "../output/data/graphics/xcsoarswiftsplash-160.bmp"
-IDB_TARGET              BITMAP  DISCARDABLE     "bitmaps/target.bmp"
-IDB_TEAMMATE_POS        BITMAP  DISCARDABLE     "bitmaps/TeammatePosition.bmp"
-IDB_TERRAINWARNING      BITMAP  DISCARDABLE     "bitmaps/terrainw.bmp"
-IDB_THERMALSOURCE       BITMAP  DISCARDABLE     "bitmaps/thermalsource.bmp"
-IDB_TOWN                BITMAP  DISCARDABLE     "bitmaps/town.bmp"
-IDB_TURNPOINT           BITMAP  DISCARDABLE     "bitmaps/Turnpoint.bmp"
+IDB_TARGET              BITMAP  DISCARDABLE     "../output/data/icons/map_target.bmp"
+IDB_TEAMMATE_POS        BITMAP  DISCARDABLE     "../output/data/icons/map_teammate.bmp"
+IDB_TERRAINWARNING      BITMAP  DISCARDABLE     "../output/data/icons/map_terrainw.bmp"
+IDB_THERMALSOURCE       BITMAP  DISCARDABLE     "../output/data/icons/map_thermal_source.bmp"
+IDB_TOWN                BITMAP  DISCARDABLE     "../output/data/icons/map_town.bmp"
+IDB_TURNPOINT           BITMAP  DISCARDABLE     "../output/data/icons/map_turnpoint.bmp"
 IDB_UNIT_KM             BITMAP  DISCARDABLE     "bitmaps/UnitKm.bmp"
 IDB_UNIT_SM             BITMAP  DISCARDABLE     "bitmaps/UnitSm.bmp"
 IDB_UNIT_NM             BITMAP  DISCARDABLE     "bitmaps/UnitNm.bmp"
