Screen/Graphics: Renamed high resolution icon resources

--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -42,7 +42,7 @@ IDB_FLARMTRAFFIC        BITMAP  DISCARDABLE     "../output/data/icons/map_flarm.
 IDB_GPSSTATUS1          BITMAP  DISCARDABLE     "../output/data/icons/gps_acquiring.bmp"
 IDB_GPSSTATUS2          BITMAP  DISCARDABLE     "../output/data/icons/gps_disconnected.bmp"
 IDB_LANDABLE            BITMAP  DISCARDABLE     "../output/data/icons/winpilot_landable.bmp"
-IDB_LANDABLE_BIG        BITMAP  DISCARDABLE     "../output/data/icons/winpilot_landable-160.bmp"
+IDB_LANDABLE_HD         BITMAP  DISCARDABLE     "../output/data/icons/winpilot_landable-160.bmp"
 IDB_LAUNCHER1           BITMAP  DISCARDABLE     "../output/data/graphics/launcher-224-1.bmp"
 IDB_LAUNCHER2           BITMAP  DISCARDABLE     "../output/data/graphics/launcher-224-2.bmp"
 IDB_LOGGER              BITMAP  DISCARDABLE     "../output/data/icons/icon_logging.bmp"
@@ -56,7 +56,7 @@ IDB_OUTFIELD_UNREACHABLE_HD BITMAP DISCARDABLE  "../output/data/icons/alt_landab
 IDB_OUTFIELD_UNREACHABLE2 BITMAP DISCARDABLE    "../output/data/icons/alt2_landable_field.bmp"
 IDB_OUTFIELD_UNREACHABLE2_HD BITMAP DISCARDABLE "../output/data/icons/alt2_landable_field-160.bmp"
 IDB_REACHABLE           BITMAP  DISCARDABLE     "../output/data/icons/winpilot_reachable.bmp"
-IDB_REACHABLE_BIG       BITMAP  DISCARDABLE     "../output/data/icons/winpilot_reachable-160.bmp"
+IDB_REACHABLE_HD        BITMAP  DISCARDABLE     "../output/data/icons/winpilot_reachable-160.bmp"
 IDB_SMALL               BITMAP  DISCARDABLE     "../output/data/icons/map_small.bmp"
 IDB_SWIFT               BITMAP  DISCARDABLE     "../output/data/graphics/xcsoarswiftsplash-220.bmp"
 IDB_SWIFT2              BITMAP  DISCARDABLE     "../output/data/graphics/xcsoarswiftsplash-160.bmp"
