Screen/Graphics: Used high resolution icons for logger icons

--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -46,7 +46,9 @@ IDB_LANDABLE_HD         BITMAP  DISCARDABLE     "../output/data/icons/winpilot_l
 IDB_LAUNCHER1           BITMAP  DISCARDABLE     "../output/data/graphics/launcher-224-1.bmp"
 IDB_LAUNCHER2           BITMAP  DISCARDABLE     "../output/data/graphics/launcher-224-2.bmp"
 IDB_LOGGER              BITMAP  DISCARDABLE     "../output/data/icons/icon_logging.bmp"
+IDB_LOGGER_HD           BITMAP  DISCARDABLE     "../output/data/icons/icon_logging-160.bmp"
 IDB_LOGGEROFF           BITMAP  DISCARDABLE     "../output/data/icons/icon_logging_off.bmp"
+IDB_LOGGEROFF_HD        BITMAP  DISCARDABLE     "../output/data/icons/icon_logging_off-160.bmp"
 IDB_MAPSCALE_A          BITMAP  DISCARDABLE     "bitmaps/MapScale_A.bmp"
 IDB_MARK                BITMAP  DISCARDABLE     "../output/data/icons/map_flag.bmp"
 IDB_OUTFIELD_REACHABLE  BITMAP  DISCARDABLE     "../output/data/icons/alt_reachable_field.bmp"
