--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -58,6 +58,7 @@ IDB_OUTFIELD_UNREACHABLE2_HD BITMAP DISCARDABLE "../output/data/icons/alt2_landa
 IDB_REACHABLE           BITMAP  DISCARDABLE     "../output/data/icons/winpilot_reachable.bmp"
 IDB_REACHABLE_HD        BITMAP  DISCARDABLE     "../output/data/icons/winpilot_reachable-160.bmp"
 IDB_SMALL               BITMAP  DISCARDABLE     "../output/data/icons/map_small.bmp"
+IDB_SMALL_HD            BITMAP  DISCARDABLE     "../output/data/icons/map_small-160.bmp"
 IDB_SWIFT               BITMAP  DISCARDABLE     "../output/data/graphics/xcsoarswiftsplash-220.bmp"
 IDB_SWIFT2              BITMAP  DISCARDABLE     "../output/data/graphics/xcsoarswiftsplash-160.bmp"
 IDB_TARGET              BITMAP  DISCARDABLE     "../output/data/icons/map_target.bmp"
@@ -66,6 +67,7 @@ IDB_TERRAINWARNING      BITMAP  DISCARDABLE     "../output/data/icons/map_terrai
 IDB_THERMALSOURCE       BITMAP  DISCARDABLE     "../output/data/icons/map_thermal_source.bmp"
 IDB_TOWN                BITMAP  DISCARDABLE     "../output/data/icons/map_town.bmp"
 IDB_TURNPOINT           BITMAP  DISCARDABLE     "../output/data/icons/map_turnpoint.bmp"
+IDB_TURNPOINT_HD        BITMAP  DISCARDABLE     "../output/data/icons/map_turnpoint-160.bmp"
 IDB_UNIT_KM             BITMAP  DISCARDABLE     "bitmaps/UnitKm.bmp"
 IDB_UNIT_SM             BITMAP  DISCARDABLE     "bitmaps/UnitSm.bmp"
 IDB_UNIT_NM             BITMAP  DISCARDABLE     "bitmaps/UnitNm.bmp"
