Screen/Graphics: Used more high resolution icons

--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -12,6 +12,7 @@ IDI_XCSOAR              ICON    DISCARDABLE     "bitmaps/xcsoarswift.ico"
 // --- Bitmaps ---
 
 IDB_ABORT               BITMAP  DISCARDABLE     "../output/data/icons/mode_abort.bmp"
+IDB_ABORT_HD            BITMAP  DISCARDABLE     "../output/data/icons/mode_abort-160.bmp"
 IDB_ABOVETERRAIN        BITMAP  DISCARDABLE     "bitmaps/aboveterrain.bmp"
 IDB_AIRPORT_REACHABLE   BITMAP  DISCARDABLE     "../output/data/icons/alt_reachable_airport.bmp"
 IDB_AIRPORT_REACHABLE_HD BITMAP DISCARDABLE     "../output/data/icons/alt_reachable_airport-160.bmp"
@@ -30,15 +31,20 @@ IDB_AIRSPACE7           BITMAP  DISCARDABLE     "bitmaps/airspace7.bmp"
 IDB_AIRSPACEI           BITMAP  DISCARDABLE     "bitmaps/airspacei.bmp"
 IDB_AUTOMACCREADY       BITMAP  DISCARDABLE     "bitmaps/automcre.bmp"
 IDB_CRUISE              BITMAP  DISCARDABLE     "../output/data/icons/mode_cruise.bmp"
+IDB_CRUISE_HD           BITMAP  DISCARDABLE     "../output/data/icons/mode_cruise-160.bmp"
 IDB_CLIMB               BITMAP  DISCARDABLE     "../output/data/icons/mode_climb.bmp"
+IDB_CLIMB_HD            BITMAP  DISCARDABLE     "../output/data/icons/mode_climb-160.bmp"
 IDB_CLIMBSMALL          BITMAP  DISCARDABLE     "bitmaps/climb_12.bmp"
 IDB_CLIMBSMALLINV       BITMAP  DISCARDABLE     "bitmaps/climb_12inv.bmp"
 IDB_DLGBUTTONLEFT32     BITMAP  DISCARDABLE     "bitmaps/DialogButtonLeft32x32.bmp"
 IDB_DLGBUTTONRIGHT32    BITMAP  DISCARDABLE     "bitmaps/DialogButtonRight32x32.bmp"
 IDB_FINALGLIDE          BITMAP  DISCARDABLE     "../output/data/icons/mode_finalglide.bmp"
+IDB_FINALGLIDE_HD       BITMAP  DISCARDABLE     "../output/data/icons/mode_finalglide-160.bmp"
 IDB_FLARMTRAFFIC        BITMAP  DISCARDABLE     "../output/data/icons/map_flarm.bmp"
 IDB_GPSSTATUS1          BITMAP  DISCARDABLE     "../output/data/icons/gps_acquiring.bmp"
+IDB_GPSSTATUS1_HD       BITMAP  DISCARDABLE     "../output/data/icons/gps_acquiring-160.bmp"
 IDB_GPSSTATUS2          BITMAP  DISCARDABLE     "../output/data/icons/gps_disconnected.bmp"
+IDB_GPSSTATUS2_HD       BITMAP  DISCARDABLE     "../output/data/icons/gps_disconnected-160.bmp"
 IDB_LANDABLE            BITMAP  DISCARDABLE     "../output/data/icons/winpilot_landable.bmp"
 IDB_LANDABLE_HD         BITMAP  DISCARDABLE     "../output/data/icons/winpilot_landable-160.bmp"
 IDB_LAUNCHER1           BITMAP  DISCARDABLE     "../output/data/graphics/launcher-224-1.bmp"
