--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -28,7 +28,7 @@ IDB_AIRSPACE4           BITMAP  DISCARDABLE     "bitmaps/airspace4.bmp"
 IDB_AIRSPACE5           BITMAP  DISCARDABLE     "bitmaps/airspace5.bmp"
 IDB_AIRSPACE6           BITMAP  DISCARDABLE     "bitmaps/airspace6.bmp"
 IDB_AIRSPACE7           BITMAP  DISCARDABLE     "bitmaps/airspace7.bmp"
-IDB_AIRSPACEI           BITMAP  DISCARDABLE     "bitmaps/airspacei.bmp"
+IDB_AIRSPACEI           BITMAP  DISCARDABLE     "../output/data/icons/airspace_intercept.bmp"
 IDB_AUTOMACCREADY       BITMAP  DISCARDABLE     "bitmaps/automcre.bmp"
 IDB_CRUISE              BITMAP  DISCARDABLE     "../output/data/icons/mode_cruise.bmp"
 IDB_CRUISE_HD           BITMAP  DISCARDABLE     "../output/data/icons/mode_cruise-160.bmp"
