Screen/Graphics: Used more high resolution icons

--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -29,6 +29,7 @@ IDB_AIRSPACE5           BITMAP  DISCARDABLE     "bitmaps/airspace5.bmp"
 IDB_AIRSPACE6           BITMAP  DISCARDABLE     "bitmaps/airspace6.bmp"
 IDB_AIRSPACE7           BITMAP  DISCARDABLE     "bitmaps/airspace7.bmp"
 IDB_AIRSPACEI           BITMAP  DISCARDABLE     "../output/data/icons/airspace_intercept.bmp"
+IDB_AIRSPACEI_HD        BITMAP  DISCARDABLE     "../output/data/icons/airspace_intercept-160.bmp"
 IDB_AUTOMACCREADY       BITMAP  DISCARDABLE     "bitmaps/automcre.bmp"
 IDB_CRUISE              BITMAP  DISCARDABLE     "../output/data/icons/mode_cruise.bmp"
 IDB_CRUISE_HD           BITMAP  DISCARDABLE     "../output/data/icons/mode_cruise-160.bmp"
@@ -41,6 +42,7 @@ IDB_DLGBUTTONRIGHT32    BITMAP  DISCARDABLE     "bitmaps/DialogButtonRight32x32.
 IDB_FINALGLIDE          BITMAP  DISCARDABLE     "../output/data/icons/mode_finalglide.bmp"
 IDB_FINALGLIDE_HD       BITMAP  DISCARDABLE     "../output/data/icons/mode_finalglide-160.bmp"
 IDB_FLARMTRAFFIC        BITMAP  DISCARDABLE     "../output/data/icons/map_flarm.bmp"
+IDB_FLARMTRAFFIC_HD     BITMAP  DISCARDABLE     "../output/data/icons/map_flarm-160.bmp"
 IDB_GPSSTATUS1          BITMAP  DISCARDABLE     "../output/data/icons/gps_acquiring.bmp"
 IDB_GPSSTATUS1_HD       BITMAP  DISCARDABLE     "../output/data/icons/gps_acquiring-160.bmp"
 IDB_GPSSTATUS2          BITMAP  DISCARDABLE     "../output/data/icons/gps_disconnected.bmp"
@@ -55,6 +57,7 @@ IDB_LOGGEROFF           BITMAP  DISCARDABLE     "../output/data/icons/icon_loggi
 IDB_LOGGEROFF_HD        BITMAP  DISCARDABLE     "../output/data/icons/icon_logging_off-160.bmp"
 IDB_MAPSCALE_A          BITMAP  DISCARDABLE     "bitmaps/MapScale_A.bmp"
 IDB_MARK                BITMAP  DISCARDABLE     "../output/data/icons/map_flag.bmp"
+IDB_MARK_HD             BITMAP  DISCARDABLE     "../output/data/icons/map_flag-160.bmp"
 IDB_OUTFIELD_REACHABLE  BITMAP  DISCARDABLE     "../output/data/icons/alt_reachable_field.bmp"
 IDB_OUTFIELD_REACHABLE_HD BITMAP DISCARDABLE    "../output/data/icons/alt_reachable_field-160.bmp"
 IDB_OUTFIELD_UNREACHABLE BITMAP DISCARDABLE     "../output/data/icons/alt_landable_field.bmp"
@@ -68,9 +71,13 @@ IDB_SMALL_HD            BITMAP  DISCARDABLE     "../output/data/icons/map_small-
 IDB_SWIFT               BITMAP  DISCARDABLE     "../output/data/graphics/xcsoarswiftsplash-220.bmp"
 IDB_SWIFT2              BITMAP  DISCARDABLE     "../output/data/graphics/xcsoarswiftsplash-160.bmp"
 IDB_TARGET              BITMAP  DISCARDABLE     "../output/data/icons/map_target.bmp"
+IDB_TARGET_HD           BITMAP  DISCARDABLE     "../output/data/icons/map_target-160.bmp"
 IDB_TEAMMATE_POS        BITMAP  DISCARDABLE     "../output/data/icons/map_teammate.bmp"
+IDB_TEAMMATE_POS_HD     BITMAP  DISCARDABLE     "../output/data/icons/map_teammate-160.bmp"
 IDB_TERRAINWARNING      BITMAP  DISCARDABLE     "../output/data/icons/map_terrainw.bmp"
+IDB_TERRAINWARNING_HD   BITMAP  DISCARDABLE     "../output/data/icons/map_terrainw-160.bmp"
 IDB_THERMALSOURCE       BITMAP  DISCARDABLE     "../output/data/icons/map_thermal_source.bmp"
+IDB_THERMALSOURCE_HD    BITMAP  DISCARDABLE     "../output/data/icons/map_thermal_source-160.bmp"
 IDB_TOWN                BITMAP  DISCARDABLE     "../output/data/icons/map_town.bmp"
 IDB_TURNPOINT           BITMAP  DISCARDABLE     "../output/data/icons/map_turnpoint.bmp"
 IDB_TURNPOINT_HD        BITMAP  DISCARDABLE     "../output/data/icons/map_turnpoint-160.bmp"
