--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -137,6 +137,8 @@ IDR_XML_COMBOPICKER     XMLDIALOG DISCARDABLE   "Dialogs/dlgComboPicker.xml"
 IDR_XML_COMBOPICKER_L   XMLDIALOG DISCARDABLE   "Dialogs/dlgComboPicker_L.xml"
 IDR_XML_CONFIGURATION   XMLDIALOG DISCARDABLE   "Dialogs/dlgConfiguration.xml"
 IDR_XML_CONFIGURATION_L XMLDIALOG DISCARDABLE   "Dialogs/dlgConfiguration_L.xml"
+IDR_XML_CONFIG_PAGE     XMLDIALOG DISCARDABLE   "Dialogs/dlgConfigPage.xml"
+IDR_XML_CONFIG_PAGE_L   XMLDIALOG DISCARDABLE   "Dialogs/dlgConfigPage_L.xml"
 IDR_XML_FILESELECT      XMLDIALOG DISCARDABLE   "Dialogs/dlgFileSelect.xml"
 IDR_XML_FLARMTRAFFIC    XMLDIALOG DISCARDABLE   "Dialogs/dlgFlarmTraffic.xml"
 IDR_XML_FLARMTRAFFIC_L  XMLDIALOG DISCARDABLE   "Dialogs/dlgFlarmTraffic_L.xml"
