--- a/mapgen/.project
+++ b/mapgen/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>XCSoar TerrainGen</name>
+	<name>XCSoar MapGen</name>
 	<comment></comment>
 	<projects>
 	</projects>
